Fixes a bug in chrome that rendered pages blurry inside iframes

--- a/src/main/resources/default/assets/wondergem/stylesheets/scaffolding.scss
+++ b/src/main/resources/default/assets/wondergem/stylesheets/scaffolding.scss
@@ -17,6 +17,10 @@ body {
   font-family: $sansFontFamily;
   color: $textColor;
   background-color: $bodyBackground;
+
+  // prevents blurry rendering in iframes
+  backface-visibility: hidden;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 // Links
